feat: update channelID in schema OpenAPI
